# opentelemetry-study

./: README.md  compose.yaml  pyproject.toml
app/: app.py
