[project]
name = "opentelemetry-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew",email = "andrewunifei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "opentelemetry-distro (>=0.57b0,<0.58)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poe]
envfile = ".env"

[tool.poe.tasks.serve]
shell = "opentelemetry-instrument uvicorn app.app:app"

[tool.poe.tasks]
otel-install = "opentelemetry-bootstrap -a install"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.otel.dependencies]
opentelemetry-distro = "^0.57b0"
opentelemetry-exporter-otlp = "^1.36.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.37.0"

